--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <div class="prompt-controls-left">
                         <div id="tools-menu-container" class="tools-menu-container">
                             <button type="button" id="tools-btn" class="internal-action-btn" data-tooltip="Tools">
-                                <span class="material-symbols-rounded">apps</span>
+                                <span class="material-symbols-rounded">tune</span>
                             </button>
                             <div id="tools-menu" class="tools-menu-content">
                                 <div class="tools-grid">
@@ -167,39 +167,39 @@
                                 <span class="material-symbols-rounded">expand_more</span>
                             </button>
                             <div id="model-dropdown-content" class="dropdown-content">
-                                <a href="#" data-model="Gemini 2.5 Flash" data-icon="bolt">
+                                <a href="#" data-model="MadeonLLM 2.5 Flash" data-icon="bolt">
                                     <div class="model-icon-container">
                                         <span class="material-symbols-rounded model-icon">bolt</span>
                                     </div>
                                     <div class="model-info">
-                                        <span class="model-name">Gemini 2.5 Flash</span>
+                                        <span class="model-name">MadeonLLM 2.5 Flash</span>
                                         <p class="model-description">Quick and efficient for everyday tasks.</p>
                                     </div>
                                 </a>
-                                <a href="#" data-model="Gemini 2.5 Pro" data-icon="auto_awesome">
+                                <a href="#" data-model="MadeonLLM 2.5 Pro" data-icon="auto_awesome">
                                     <div class="model-icon-container">
                                         <span class="material-symbols-rounded model-icon">auto_awesome</span>
                                     </div>
                                     <div class="model-info">
-                                        <span class="model-name">Gemini 2.5 Pro</span>
+                                        <span class="model-name">MadeonLLM 2.5 Pro</span>
                                         <p class="model-description">Advanced, for complex reasoning.</p>
                                     </div>
                                 </a>
-                                <a href="#" data-model="Perplexity Sonar" data-icon="hub">
+                                <a href="#" data-model="MDLLM 2.5 Research" data-icon="hub">
                                     <div class="model-icon-container">
                                          <span class="material-symbols-rounded model-icon">hub</span>
                                     </div>
                                     <div class="model-info">
-                                        <span class="model-name">Perplexity Sonar</span>
+                                        <span class="model-name">MDLLM 2.5 Research</span>
                                         <p class="model-description">Strongest, for difficult analysis.</p>
                                     </div>
                                 </a>
-                                 <a href="#" data-model="Perplexity Sonar Pro" data-icon="bubble_chart">
+                                 <a href="#" data-model="MDLLM 2.5 Research Pro" data-icon="bubble_chart">
                                     <div class="model-icon-container">
                                         <span class="material-symbols-rounded model-icon">bubble_chart</span>
                                     </div>
                                     <div class="model-info">
-                                        <span class="model-name">Perplexity Sonar Pro</span>
+                                        <span class="model-name">MDLLM 2.5 Research Pro <b>Preview</span>
                                         <p class="model-description">Versatile, excels at creative tasks.</p>
                                     </div>
                                 </a>
