--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<!-- Enhanced by Gemini -->
+<!-- Enhanced by Madeon Code -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Assistant | Neo-Brutalism v2</title>
+    <title>Madeon ✦ v2</title>
     <!-- Google Fonts For Icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@32,400,0,0" />
     <!-- Marked.js for Markdown parsing -->
@@ -20,8 +20,8 @@
         <!-- Main Header -->
         <header class="main-header">
             <div class="header-title">
-                <span class="material-symbols-rounded">psychology</span>
-                Assistant v2.6
+                <span class="material-symbols-rounded">auto_awesome</span>
+                Madeon v2.6
             </div>
             <button class="upgrade-btn">Upgrade</button>
         </header>
