--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <header class="main-header">
             <div class="header-title">
                 <span class="material-symbols-rounded">auto_awesome</span>
-                Madeon 2 <b>by Madesholic Data Services.</b>
+                Madeon 2 <br><b>by Madesholic Data Services.</b>
             </div>
             <button class="upgrade-btn">Upgrade</button>
         </header>
